docs: refresh guide chapters 9-11 (proxies, concurrency, error table)